--- a/SMS_Web/Views/ItemIssuance/Search.cshtml
+++ b/SMS_Web/Views/ItemIssuance/Search.cshtml
@@ -240,6 +240,9 @@
                                         Purchase #
                                     </th>
                                     <th>
+                                        Issued To
+                                    </th>
+                                    <th>
                                         System Date
                                     </th>
                                     <th>
@@ -264,6 +267,9 @@
                                             </td>
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.OrderId)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.IssuerName)
                                             </td>
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.CreatedOn.Value.ToString().Split(' ')[0])
