--- a/SMS_Web/Views/ItemPurchase/Index.cshtml
+++ b/SMS_Web/Views/ItemPurchase/Index.cshtml
@@ -25,6 +25,7 @@
                                 <div class="col-md-8 col-sm-8 col-xs-12" style="margin-top:2px;">
                                     <div>
                                         <input type="hidden" name="Print" id="Print" class="form-control input-sm" />
+                                        <input type="hidden" name="VendorId" id="VendorId" class="form-control input-sm" />
                                         <input id="orderId" type="number" value="@ViewData["OrderId"]" name="OrderId" class="form-control input-sm" style="background-color:white" readonly />
                                     </div>
                                 </div>
@@ -101,7 +102,16 @@
             </div>
 
             <div class="x_content">
-
+                <div class="form-group row">
+                    <label class="control-label col-md-7 col-sm-7 col-xs-12" align="right" for="first-name" style="font-size: 11px;">
+                        Vendor
+                    </label>
+                    <div class="col-md-5 col-sm-5 col-xs-12">
+                        <div>
+                            <input type="text" autocomplete="off" id="VendorNameId" name="VendorNameId" class="form-control input-sm" value="@ViewData["vendorName"]" />
+                        </div>
+                    </div>
+                </div>
                 <div>
                     <div class="table-responsive">
                         <table class="table table-striped table-bordered" id="classTable">
@@ -295,12 +305,14 @@
        }
                 }
                 var itemNames = [];
-
+                var vendorNames = [];
                 window.onload = function (e) {
                     populateErrors();
                     $('#purchaseDate').val('@(ViewData["OrderDate"] == null ? DateTime.Now.ToString("yyyy-MM-dd") : ((DateTime)ViewData["OrderDate"]).ToString("yyyy-MM-dd"))');
                     GetItemNames();
                     autocomplete(document.getElementById("ItemNameId"), itemNames);
+                    GetVendorNames();
+                    autocomplete(document.getElementById("VendorNameId"), vendorNames);
                     $("#qty").change(function(){
                         calculateTotal();
                     });
@@ -341,6 +353,29 @@
                     itemName = itemName.split('|')[1].trim();
 
                     return itemName;
+                }
+
+                
+                function GetVendorNames() {
+                    var i = 0;
+                    @foreach (var item in ViewBag.VendorNames)
+                    {
+                        <text>
+                        var name = '@item';
+                        vendorNames[i++] = name;
+                        </text>
+                    }
+                }
+
+                
+                function GetVendorId() {
+                    var vendorName = $('#VendorNameId').val();
+                    var id = 0;
+                    if (vendorName != null && vendorName.length > 0) {
+                        id = vendorName.split('|')[0].trim();
+                    }
+
+                    return id;
                 }
 
                 function AddItemPurchaseDetail()
@@ -422,6 +457,7 @@
                     $('#Print').val(print);
 
                     var rowCount = document.getElementById("classTable").rows.length;
+                    var vendorId = GetVendorId();
                     var objCount = 0;
                     var listName = "itemPurchaseList";
                     if(rowCount == 1)
@@ -429,8 +465,14 @@
                         showNotification('No Items are added in the issuance', 'Error', 'Error');
                         return false;
                     }
+                    else if(vendorId == 0)
+                    {
+                        showNotification('Please enter a vendor to save the purchase', 'Error', 'Error');
+                        return false;
+                    }
                     else
                     {
+                        $('#VendorId').val(vendorId);
                         for (var i = 1; i < rowCount; i++){
                             var rowData = document.getElementById("classTable").rows[i].cells;
                             debugger
