--- a/SMS_Web/Views/ItemPurchase/Search.cshtml
+++ b/SMS_Web/Views/ItemPurchase/Search.cshtml
@@ -240,6 +240,9 @@
                                     <th>
                                         Purchase #
                                     </th>
+                                    <th>
+                                        Vendor
+                                    </th>
                                     <th style="max-width:80px">
                                         Amount
                                     </th>
@@ -268,6 +271,9 @@
                                             </td>
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.OrderId)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.VendorName)
                                             </td>
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.Amount)
